# tailtop

./: .gitignore  README.md  pyproject.toml
tailtop/: app.py  commands.py  screens.py  state.py
tailtop/data/: actions.py  client.py  demo.py  models.py  poller.py
tailtop/modes/: base.py  cockpit.py  comfort.py  observatory.py
tailtop/themes/: base.tcss  brutalist.tcss  mission_control.tcss  studio.tcss
tailtop/widgets/: detail_pane.py  device_card.py  device_list.py  disk_table.py  splash.py  status_bar.py  topology.py
tests/: test_actions.py  test_app.py  test_models.py  test_poller_integration.py  test_splash.py  test_state.py  test_topology.py  test_verbs.py
tests/fixtures/: status.json
