[project]
name = "tailtop"
version = "0.1.0"
description = "A terminal UI for Tailscale — htop for your tailnet."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "BSD-3-Clause" }
authors = [{ name = "nickv" }]
keywords = ["tailscale", "tui", "textual", "terminal", "wireguard", "vpn"]
dependencies = [
    "textual>=1.0,<2.0",
    "plotext>=5.2,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "textual-dev>=1.6,<2.0",
]

[project.scripts]
tailtop = "tailtop.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tailtop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
